edit intro message and fix spacing, worked on personal page, added my different extracirriculars, as well as temporary place holders

--- a/kelly-web/src/components/intro/intro.css
+++ b/kelly-web/src/components/intro/intro.css
@@ -26,12 +26,13 @@
     box-shadow: 4px 4px 6px rgba(0,0,0,0.2);
 }
 .aboutMe h2{
-    padding-top: 100px;
+    padding-top: 50px;
+    padding-bottom: 15px;
     color: rgb(255, 214, 219);
-    text-shadow: 1px 0px 1px rgba(0,0,0,0.2);
+    text-shadow: 2px 2px 2px rgba(216, 112, 147,1);
 }
 .aboutMe p{
-    padding-top: 30px;
+    padding-top: 20px;
     padding-left: 100px;
     padding-right: 100px;
 }
