--- a/kelly-web/src/components/personal/personal.css
+++ b/kelly-web/src/components/personal/personal.css
@@ -1,3 +1,77 @@
 .personal{
     background-color: rgb(252, 184, 189);
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    color: white;
+    text-shadow: 2px 2px 2px rgba(216, 112, 147,1);
 }
+.personal h1{
+    padding-top: 50px;
+    font-size: 50px;
+    align-items: center;
+}
+.personal ul{
+    margin: 10px;
+    padding-top: 70px;
+    list-style: none;
+    display:flex;
+    justify-content: center;
+
+}
+.personal ul li{
+    font-size: 30px;
+    margin-right: 50px;
+    padding: 5px;
+    border-radius: 10px;
+    cursor: pointer;
+    &.active{
+        background-color: white;
+        color: palevioletred;
+        text-shadow: 0 0 0 rgba(216, 112, 147,1);
+
+    }
+
+}
+
+.container{
+    width: 70%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+} 
+.container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: 1;
+}
+
+.item{
+    width: 300px;
+    height: 230px;
+    border-radius: 20px;
+    border: 1px solid palevioletred;
+    margin: 30px 50px;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    color:white;
+    position: relative;
+    transition: all 0.8s ease;
+    cursor:pointer;
+}
+.item:hover{
+    background-color: palevioletred;
+}
+.item:hover img{
+    opacity: 0.2;
+    z-index: 0;
+}
+.item h3{
+    position: absolute;
+    font-size: 20px;
+}
+
+
